Update portfolio: reorder sections, add demo buttons, fix project alignment, add 8-puzzle demo image

--- a/style.css
+++ b/style.css
@@ -423,9 +423,11 @@ section {
 
 .article-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 350px;
+  height: 300px;
+  overflow: hidden;
 }
 
 article {
@@ -452,11 +454,11 @@ article .icon {
 
 .project-img {
   border-radius: 2rem;
-  width: 90%;
-  height: 300px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
-  margin: 0 auto;
+  display: block;
 }
 
 .project-title {
@@ -703,24 +705,11 @@ footer p {
   padding: 1rem;
   background: rgb(250, 250, 250);
   border-color: rgb(163, 163, 163);
+  min-height: 500px;
+  justify-content: space-between;
 }
 
-/* Image container */
-.article-container {
-  width: 100%;
-  height: 350px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-/* Project image */
-.project-img {
-  width: 90%;
-  height: 300px;
-  object-fit: cover;
-  border-radius: 2rem;
-}
 
 /* Project title */
 .experience-sub-title.project-title {
